lang/macro/tests/ui/fail/10-async-constructor.stderr
error: `async fn` is not supported for ink! functions
  --> $DIR/10-async-constructor.rs:10:9
   |
10 |         async fn invalid_return(&mut self) {}
   |         ^^^^^
